--- a/.gitignore
+++ b/.gitignore
@@ -112,3 +112,4 @@ xcuserdata
 
 
 # End of https://www.toptal.com/developers/gitignore/api/swift,swiftpm,swiftpackagemanager,xcode,xcodeinjection
+Secrets.xcconfig
