updated gitignore for env

--- a/.gitignore
+++ b/.gitignore
@@ -113,3 +113,5 @@ xcuserdata
 
 # End of https://www.toptal.com/developers/gitignore/api/swift,swiftpm,swiftpackagemanager,xcode,xcodeinjection
 Secrets.xcconfig
+node_modules/
+.env
