--- a/Phraser/Info.plist
+++ b/Phraser/Info.plist
@@ -10,9 +10,16 @@
 	<string>$(AZURE_TRANSLATOR_API_KEY)</string>
 	<key>AZURE_TRANSLATOR_REGION</key>
 	<string>$(AZURE_TRANSLATOR_REGION)</string>
+	<key>SERVER_ADDRESS</key>
+	<string>$(SERVER_ADDRESS)</string>
 	<key>NSLocationWhenInUseUsageDescription</key>
 	<string>We use your location to display your current address.</string>
 	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
 	<string>We need access to your location to show your current address.</string>
+	<key>NSAppTransportSecurity</key>
+	<dict>
+		<key>NSAllowsArbitraryLoads</key>
+		<true/>
+	</dict>
 </dict>
 </plist>
